Bug 473833 - kwalletd6 does not find wallet data
Summary: kwalletd6 does not find wallet data
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kwallet
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Valentin Rusu
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-08-28 04:54 UTC by Nate Graham
Modified: 2023-08-28 15:09 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2023-08-28 04:54:28 UTC
As of today in my Plasma 6 session (built from git master daily), the KDE Wallet I set up years ago is no longer being noticed by the kded6 version of the wallet module. For example whenever I connect to my home WiFi network, I'm prompted to set up a new wallet, rather than the password to the network being looked up in the wallet.

$ qdbus org.kde.kded6 /kded org.kde.kded6.loadedModules
plasmavault
desktopnotifier
freespacenotifier
appmenu
baloosearchmodule
kded_bolt
gtkconfig
smart
proxyscout
devicenotifications
smbwatcher
kded_plasma-welcome
ksysguard
plasma_accentcolor_service
keyboard
printmanager
kded_accounts
ktimezoned
remotenotifier
bluedevil
kscreen
networkmanagement
statusnotifierwatcher


It looks like the wallet module isn't running or isn't ported to Qt6 or something?

However, manually launching /usr/bin/kded5 in addition to my built-from-source kded6 does not resolve the issue.
Comment 1 Nicolas Fella 2023-08-28 08:54:16 UTC
Kwallet is not a kded module, it's entirely expected to not show up there
Comment 2 Nicolas Fella 2023-08-28 09:06:16 UTC
I have not looked closely, but I'd guess it's related to https://invent.kde.org/frameworks/kwallet/-/merge_requests/64

That said it's quite likely developer setup weirdness with DBus, not an actual bug
Comment 3 Nicolas Fella 2023-08-28 10:21:57 UTC
I know what's going on, and it is a proper bug
Comment 4 Bug Janitor Service 2023-08-28 10:28:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kwallet/-/merge_requests/65
Comment 5 Nicolas Fella 2023-08-28 15:09:34 UTC
Git commit 859672094acca2ae5e9989590211f5a0f8408dd2 by Nicolas Fella.
Committed on 28/08/2023 at 12:26.
Pushed by nicolasfella into branch 'master'.

Properly fix wallet location

AppDataLocation contains the major version of kwalletd, which is undesired here

The code hacked around that, but that broken the moment we renamed from 5 to 6

Instead of working around AppDataLocation use GenericDataLocation and build the proper path ourselves

M  +1    -8    src/runtime/kwalletd/backend/kwalletbackend.cc

https://invent.kde.org/frameworks/kwallet/-/commit/859672094acca2ae5e9989590211f5a0f8408dd2