Properly fix wallet location

AppDataLocation contains the major version of kwalletd, which is undesired here

The code hacked around that, but that broken the moment we renamed from 5 to 6

Instead of working around AppDataLocation use GenericDataLocation and build the proper path ourselves

BUG: 473833